fix: Fix for end of game text being off-screen.

--- a/client/src/app/play/play.component.scss
+++ b/client/src/app/play/play.component.scss
@@ -100,6 +100,8 @@
   flex-direction: column;
   position: absolute;
   align-items: center;
+  top: 50%;
+  width: 100%;
 
   button {
     margin-top: 50px;
